# market-maker

./: .dockerignore  .env.template  .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  atlas-config-kupo.json  atlas-config-maestro.json  cabal.project  config-blockfrost.json  config-maestro.json  docker-compose.yml  flake.nix  fourmolu.yaml  geniusyield-orderbot.cabal  openapi.yaml  sample-mainnet-maker-bot-config-gens.json  sample-mainnet-maker-bot-config-gens.yaml  sample-preprod-maker-bot-config-gens-v2.yaml  sample-preprod-maker-bot-config-gens.json  sample-preprod-maker-bot-config-gens.yaml  start.sh
.github/: CODEOWNERS
.github/workflows/: build.yml
geniusyield-annset/: geniusyield-annset.cabal
geniusyield-annset/src/GeniusYield/AnnSet/: Internal.hs  Types.hs  Unsafe.hs
geniusyield-annset/tests/: Properties.hs  Spec.hs
geniusyield-market-maker/: CHANGELOG.md  Main.hs  geniusyield-market-maker.cabal
geniusyield-market-maker/impl/datasource-providers/GeniusYield/OrderBot/DataSource/: Providers.hs
geniusyield-market-maker/impl/orderbook-annset/GeniusYield/OrderBot/OrderBook/: AnnSet.hs
geniusyield-market-maker/src/GeniusYield/MarketMaker/: Constants.hs  Equity.hs  Logging.hs  MakerBot.hs  MakerBotConfig.hs  Orphans.hs  Prices.hs  Spread.hs  Strategies.hs  User.hs  Utils.hs
geniusyield-market-maker/src/GeniusYield/MarketMaker/Prices/: Taptools.hs  Taptools.hs~
geniusyield-market-maker/test/: Main.hs  README.md
geniusyield-market-maker/test/GeniusYield/MarketMaker/: MakerBot.hs  Prices.hs  Strategies.hs  TestUtils.hs
geniusyield-market-maker/test/GeniusYield/Test/MarketMaker/: MakerBot.hs  Utils.hs
geniusyield-orderbot-framework/: geniusyield-orderbot-framework.cabal
geniusyield-orderbot-framework/lib-common/GeniusYield/OrderBot/: Types.hs
geniusyield-orderbot-framework/lib-datasource/GeniusYield/OrderBot/: DataSource.hsig
geniusyield-orderbot-framework/lib-orderbook/GeniusYield/OrderBot/: OrderBook.hsig
impl/orderbook-list/GeniusYield/OrderBot/OrderBook/: List.hs
